# jstar

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  imp.bl  index.md  modules  parser.jsc  test.bl  test.jsr
apps/: CMakeLists.txt
apps/common/: CMakeLists.txt  extlib.c  extlib.h  path.c  path.h
apps/jstar/: CMakeLists.txt  cli.c  colorio.h  colorio_none.c  colorio_posix.c  completion.c  completion.h  console_print.c  console_print.h  dynload.h  highlighter.c  highlighter.h  hints.c  hints.h  import.c  import.h  main.c  path.c
apps/jstarc/: CMakeLists.txt  dirent.h  jstarc.c  main.c  path.h
cli/: CMakeLists.txt  cli.c
cli/src/: cli.c
cmake/: JStarConfig.cmake  Linenoise.cmake  MinGWRuntime.cmake  conf.h.in  jstar.pc.in  jstarconf.h.in  profileconf.h.in
docs/: .gitignore  CMakeLists.txt  Gemfile  _config.yml  demo.md  getting-started.md  index.html  index.md  jstar.c  package-lock.json  package.json
docs/_data/: docs.yml
docs/_docs/: README.md  index.md
docs/_includes/: head_custom.html  header_custom.html
docs/_layouts/: default.html
docs/_sass/: layout.scss  navigation.scss
docs/_sass/color_schemes/: blue-dark.scss  blue.scss
docs/_sass/custom/: custom.scss  demo.scss  docs.scss
docs/assets/css/: just-the-docs-blue-dark.scss  prism-dark.css  prism.css
docs/assets/js/: codejar.js  demo.js  docs.js  jstar-api.js  jstar.js  jstar.wasm  prism-jstar.js  prism.js  theme.js
docs/docs/: control-flow.md  docs.md  functions.md  iterator-protocol.md  lists.md  syntax.md  tables.md  tuples.md  variables.md  vaues-and-types.md
docs/scripts/: copy-assets.js
editors/: jstar.vim
jstar/: CMakeLists.txt  compiler.c  disassemble.h  import.h  object.c  opcode.def  value.c
jstar/include/: jstar.h  jstarconf.h  jstarconf.h.in
jstar/include/jsrparse/: ast.h  lex.h  linkedlist.h  parser.h  token.h  vector.h
jstar/include/jstar/: jstar.h  jstarconf.h  jstarconf.h.in
jstar/include/jstar/parse/: ast.h  lex.h  parser.h
jstar/src/: api.c  chunk.c  chunk.h  code.c  common.h  compiler.c  compiler.h  const.h  core.c  core.h  core.jsr  core.jsr.h  disassemble.c  disassemble.h  dynload.c  dynload.h  gc.c  gc.h  hashtable.c  hashtable.h  import.c  import.h  jstar.c  memory.c  memory.h  object.c  object.h  opcode.c  opcode.h  util.h  value.c  value.h  vm.c  vm.h
jstar/src/builtin/: debug.c  debug.h  debug.jsr  debug.jsr.h  io.c  io.h  io.jsr  io.jsr.h  math.c  math.h  math.jsr  math.jsr.h  modules.c  modules.h  re.c  re.jsr  re.jsr.h  sys.c  sys.h  sys.jsr  sys.jsr.h
jstar/src/jsrparse/: ast.c  ast.h  lex.c  linkedlist.c  parser.c  parser.h  token.c  token.h  vector.c
jstar/src/parse/: ast.c  lex.c  parser.c  vector.c
jstar/src/std/: core.c  core.jsr  core.jsr.h  io.c  io.jsr.h  math.c  math.jsr.h  modules.c  re.c  re.jsr  re.jsr.h  sys.c  sys.h  sys.jsr  sys.jsr.h
jstar/std/: core.jsr  io.jsr  math.c  modules.c  re.jsr.h  sys.h
profile/: CMakeLists.txt  profiler.c  profiler.h
src/: CMakeLists.txt  CMakeSettings.json  array.h  ast.c  ast.h  buffer.c  chunk.c  chunk.h  code.c  code.h  compiler.c  compiler.h  const.h  disassemble.c  disassemble.h  dynload.h  endianness.h  external-linenoise.cmake  field_index.c  field_index.h  gc.c  gc.h  hash_table.c  hash_table.h  hashtable.c  hashtable.h  import.c  import.h  int_hash_table.c  int_hash_table.h  int_hashtable.c  int_hashtable.h  jstar.c  jstar_limits.h  lex.c  linkedlist.c  linkedlist.h  main.c  memory.c  memory.h  (+29 more)
src/builtin/: blang.c  blang.h  debug.bl  debug.c  debug.h  file.bl  file.c  file.h  map.bl  map.c  modules.c  modules.h  native.c  native.h  newmap.bl  newmap.c  os.bl  os.c  os.h  rand.bl  rand.c  rand.h  re.bl  re.c  re.h  set.bl  sys.bl  sys.c  sys.h
src/builtins/: builtins.c  builtins.h  core.c  core.h  core.jsc  core.jsr  debug.jsc  io.c  io.h  io.jsc  io.jsr  math.c  math.h  math.jsc  math.jsr  re.c  re.h  re.jsc  re.jsr  sys.c  sys.h  sys.jsc
src/builtins/core/: core.c  core.h  core.jsc  core.jsr  excs.c  excs.jsc  functional.jsc  iter.c  iter.h  iter.jsc  iter.jsr  std.c  std.jsc
src/cli/: CMakeLists.txt  cli.c
src/cli/linenoise/: CMakeLists.txt  linenoise.cpp
src/include/: blang.h  blang.hpp  blconf.h  jstar.h  jstar.hpp  jstarconf.h
src/lib/: builtins.c  builtins.h  debug.c  debug.jsc  io.c  io.h  io.jsc  io.jsr  math.c  math.h  math.jsc  math.jsr  re.c  re.h  re.jsc  re.jsr  sys.jsc
src/lib/core/: core.c  core.h  core.jsc  core.jsr  excs.c  excs.h  excs.jsc  excs.jsr  iter.c  iter.h  iter.jsc  iter.jsr  std.c  std.h  std.jsc  std.jsr
src/parse/: CMakeLists.txt  ast.c  ast.h  lex.c  lex.h  linkedlist.c  linkedlist.h  parser.c  token.c  token.h  vector.c
src/std/: core.c  core.h  core.incl  core.jsc  core.jsr  core.jsr.h  debug.c  debug.incl  debug.jsc  io.c  io.h  io.incl  io.jsc  io.jsr  math.incl  math.jsc  math.jsr  math.jsr.h  modules.c  modules.h  re.c  re.incl  re.jsc  re.jsr  re.jsr.h  sys.c  sys.h  sys.incl  sys.jsc  sys.jsr  sys.jsr.h
src/vm/: CMakeLists.txt  api.c  ast.c  ast.h  blconf.h.in  chunk.c  chunk.h  compiler.c  compiler.h  const.h  core.bl  core.c  core.h  core.jsr  core.jsr.h  disassemble.c  dynload.c  hashtable.c  hashtable.h  import.c  import.h  jstarconf.h.in  lex.c  lex.h  linkedlist.c  linkedlist.h  memory.c  memory.h  native.c  native.h  object.c  object.h  opcode.c  opcode.h  opcode_jmp_table.h  options.h.in  parser.c  stringbuf.c  stringbuf.h  token.c  (+7 more)
src/vm/blparse/: ast.h  lex.c  lex.h  linkedlist.h  parser.c  parser.h
src/vm/builtin/: debug.c  debug.h  debug.jsr.h  io.bl  io.c  io.h  io.jsr.h  map.bl  map.c  map.h  map.jsr.h  math.bl  math.c  math.h  math.jsr.h  modules.c  modules.h  rand.bl  rand.c  rand.h  re.bl  re.c  re.h  re.jsr.h  set.bl  set.jsr  set.jsr.h  sys.bl  sys.c  sys.h  sys.jsr  sys.jsr.h
src/vm/debug/: disassemble.c  disassemble.h
src/vm/jsrparse/: ast.c  ast.h  lex.c  lex.h  parser.c  parser.h  token.h
src/vm/parse/: ast.c  ast.h  lex.c  lex.h  parser.c  parser.h  token.c  token.h
src/vm/util/: enum.h  stringbuf.c  stringbuf.h
util/: icon.rc  (+1 more)
(+25 files in other folders)
